--- a/API/API.csproj
+++ b/API/API.csproj
@@ -24,7 +24,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.10.0" />
     <ProjectReference Include="..\Data\Data.csproj" />
-    <ProjectReference Include="..\Business\Business.csproj" />
+    <!-- <ProjectReference Include="..\Business\Business.csproj" /> -->
   </ItemGroup>
 
 </Project>
