--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -21,6 +21,6 @@
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.10.0" />
-    <ProjectReference Include="..\Data\Data.csproj" />
+    <ProjectReference Include="..\API\API.csproj" />
   </ItemGroup>
 </Project>
