--- a/ClientAstree/ClientAstree.csproj
+++ b/ClientAstree/ClientAstree.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="LocalStorage" Version="2.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
