--- a/ClientAstree/ClientAstree.csproj
+++ b/ClientAstree/ClientAstree.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="EPPlus" Version="7.1.3" />
+    <PackageReference Include="Google.Apis.AnalyticsData.v1beta" Version="1.68.0.3421" />
+    <PackageReference Include="Google.Apis.AnalyticsReporting.v4" Version="1.68.0.2484" />
     <PackageReference Include="itext7" Version="8.0.4" />
     <PackageReference Include="itext7.bouncy-castle-adapter" Version="8.0.4" />
     <PackageReference Include="LocalStorage" Version="2.1.0" />
